[package]
name = "OpSys"
version = "0.1.0"
authors = ["Jem Tucker <jem.tucker@gmail.com>"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "0.1.4"
spin = "0.3.4"
bitflags = "0.7.0"
once = "0.2.1"

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"

[dependencies.x86]
version = "0.7.0"
default-features = false

[dependencies.jem_alloc]
path = "libs/jem_alloc"
